Refaktorizacia a oprava tlacovych skriptov

--- a/Aplikácia/tools/dovolenkovy-listok.tex
+++ b/Aplikácia/tools/dovolenkovy-listok.tex
@@ -8,6 +8,7 @@
 \usepackage{tabularx}
 \usepackage[normalem]{ulem}
 
+\input{data.tex}
 % \providecommand\priezviskomeno{Bertrand Macronovská Jaroslava}
 % \providecommand\osobnecislo{123456789}
 % \providecommand\utvar{Katedra aplikovanej informatiky}
